gl_ext_api.h


typedef double GLdouble;

typedef float GLclampf;

typedef float GLfloat;

typedef int GLint;

typedef int GLsizei;

typedef short GLshort;

typedef unsigned char GLboolean;

typedef unsigned int GLenum;

typedef unsigned int GLsizei;

typedef unsigned int GLuint;

typedef void GLvoid;


void BlendColor(GLclampf, GLclampf, GLclampf, GLclampf);

void BlendEquation(GLenum);

void DrawRangeElements(GLenum, GLuint, GLuint, GLsizei, GLenum, const GLvoid *);

void ColorTable(GLenum, GLenum, GLsizei, GLenum, GLenum, const GLvoid *);

void ColorTableParameterfv(GLenum, GLenum, const GLfloat *);

void ColorTableParameteriv(GLenum, GLenum, const GLint *);

void CopyColorTable(GLenum, GLenum, GLint, GLint, GLsizei);

void GetColorTable(GLenum, GLenum, GLenum, GLvoid *);

void GetColorTableParameterfv(GLenum, GLenum, GLfloat *);

void GetColorTableParameteriv(GLenum, GLenum, GLint *);

void ColorSubTable(GLenum, GLsizei, GLsizei, GLenum, GLenum, const GLvoid *);

void CopyColorSubTable(GLenum, GLsizei, GLint, GLint, GLsizei);

void TexImage3D(GLenum, GLint, GLint, GLsizei, GLsizei, GLsizei, GLint, GLenum, GLenum, const GLvoid *);

void TexSubImage3D(GLenum, GLint, GLint, GLint, GLint, GLsizei, GLsizei, GLsizei, GLenum, GLenum, const GLvoid *);

void CopyTexSubImage3D(GLenum, GLint, GLint, GLint, GLint, GLint, GLint, GLsizei, GLsizei);


void ConvolutionFilter1D(GLenum, GLenum, GLsizei, GLenum, GLenum, const GLvoid *);

void ConvolutionFilter2D(GLenum, GLenum, GLsizei, GLsizei, GLenum, GLenum, const GLvoid *);

void ConvolutionParameterf(GLenum, GLenum, GLfloat);

void ConvolutionParameterfv(GLenum, GLenum, const GLfloat *);

void ConvolutionParameteri(GLenum, GLenum, GLint);

void ConvolutionParameteriv(GLenum, GLenum, const GLint *);

void CopyConvolutionFilter1D(GLenum, GLenum, GLint, GLint, GLsizei);

void CopyConvolutionFilter2D(GLenum, GLenum, GLint, GLint, GLsizei, GLsizei);

void GetConvolutionFilter(GLenum, GLenum, GLenum, GLvoid *);

void GetConvolutionParameterfv(GLenum, GLenum, GLfloat *);

void GetConvolutionParameteriv(GLenum, GLenum, GLint *);

void GetSeparableFilter(GLenum, GLenum, GLenum, GLvoid *, GLvoid *, GLvoid *);

void SeparableFilter2D(GLenum, GLenum, GLsizei, GLsizei, GLenum, GLenum, const GLvoid *, const GLvoid *);

void GetHistogram(GLenum, GLboolean, GLenum, GLenum, GLvoid *);

void GetHistogramParameterfv(GLenum, GLenum, GLfloat *);

void GetHistogramParameteriv(GLenum, GLenum, GLint *);

void GetMinmax(GLenum, GLboolean, GLenum, GLenum, GLvoid *);

void GetMinmaxParameterfv(GLenum, GLenum, GLfloat *);

void GetMinmaxParameteriv(GLenum, GLenum, GLint *);

void Histogram(GLenum, GLsizei, GLenum, GLboolean);

void Minmax(GLenum, GLenum, GLboolean);

void ResetHistogram(GLenum);

void ResetMinmax(GLenum);


void ActiveTexture(GLenum);

void ClientActiveTexture(GLenum);

void MultiTexCoord1d(GLenum, GLdouble);

void MultiTexCoord1dv(GLenum, const GLdouble *);

void MultiTexCoord1f(GLenum, GLfloat);

void MultiTexCoord1fv(GLenum, const GLfloat *);

void MultiTexCoord1i(GLenum, GLint);

void MultiTexCoord1iv(GLenum, const GLint *);

void MultiTexCoord1s(GLenum, GLshort);

void MultiTexCoord1sv(GLenum, const GLshort *);

void MultiTexCoord2d(GLenum, GLdouble, GLdouble);

void MultiTexCoord2dv(GLenum, const GLdouble *);

void MultiTexCoord2f(GLenum, GLfloat, GLfloat);

void MultiTexCoord2fv(GLenum, const GLfloat *);

void MultiTexCoord2i(GLenum, GLint, GLint);

void MultiTexCoord2iv(GLenum, const GLint *);

void MultiTexCoord2s(GLenum, GLshort, GLshort);

void MultiTexCoord2sv(GLenum, const GLshort *);

void MultiTexCoord3d(GLenum, GLdouble, GLdouble, GLdouble);

void MultiTexCoord3dv(GLenum, const GLdouble *);

void MultiTexCoord3f(GLenum, GLfloat, GLfloat, GLfloat);

void MultiTexCoord3fv(GLenum, const GLfloat *);

void MultiTexCoord3i(GLenum, GLint, GLint, GLint);

void MultiTexCoord3iv(GLenum, const GLint *);

void MultiTexCoord3s(GLenum, GLshort, GLshort, GLshort);

void MultiTexCoord3sv(GLenum, const GLshort *);

void MultiTexCoord4d(GLenum, GLdouble, GLdouble, GLdouble, GLdouble);

void MultiTexCoord4dv(GLenum, const GLdouble *);

void MultiTexCoord4f(GLenum, GLfloat, GLfloat, GLfloat, GLfloat);

void MultiTexCoord4fv(GLenum, const GLfloat *);

void MultiTexCoord4i(GLenum, GLint, GLint, GLint, GLint);

void MultiTexCoord4iv(GLenum, const GLint *);

void MultiTexCoord4s(GLenum, GLshort, GLshort, GLshort, GLshort);