gl_ext_api.scm


(begin
  (begin
    (define BlendColor
      (foreign-lambda void "BlendColor" float float float float)))
  (begin
    (define BlendEquation
      (foreign-lambda void "BlendEquation" unsigned-integer)))
  (begin
    (define DrawRangeElements
      (foreign-lambda
        void
        "DrawRangeElements"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define ColorTable
      (foreign-lambda
        void
        "ColorTable"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define ColorTableParameterfv
      (foreign-lambda
        void
        "ColorTableParameterfv"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define ColorTableParameteriv
      (foreign-lambda
        void
        "ColorTableParameteriv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define CopyColorTable
      (foreign-lambda
        void
        "CopyColorTable"
        unsigned-integer
        unsigned-integer
        integer
        integer
        unsigned-integer)))
  (begin
    (define GetColorTable
      (foreign-lambda
        void
        "GetColorTable"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define GetColorTableParameterfv
      (foreign-lambda
        void
        "GetColorTableParameterfv"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetColorTableParameteriv
      (foreign-lambda
        void
        "GetColorTableParameteriv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define ColorSubTable
      (foreign-lambda
        void
        "ColorSubTable"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define CopyColorSubTable
      (foreign-lambda
        void
        "CopyColorSubTable"
        unsigned-integer
        unsigned-integer
        integer
        integer
        unsigned-integer)))
  (begin
    (define TexImage3D
      (foreign-lambda
        void
        "TexImage3D"
        unsigned-integer
        integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define TexSubImage3D
      (foreign-lambda
        void
        "TexSubImage3D"
        unsigned-integer
        integer
        integer
        integer
        integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define CopyTexSubImage3D
      (foreign-lambda
        void
        "CopyTexSubImage3D"
        unsigned-integer
        integer
        integer
        integer
        integer
        integer
        integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define ConvolutionFilter1D
      (foreign-lambda
        void
        "ConvolutionFilter1D"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define ConvolutionFilter2D
      (foreign-lambda
        void
        "ConvolutionFilter2D"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define ConvolutionParameterf
      (foreign-lambda
        void
        "ConvolutionParameterf"
        unsigned-integer
        unsigned-integer
        float)))
  (begin
    (define ConvolutionParameterfv
      (foreign-lambda
        void
        "ConvolutionParameterfv"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define ConvolutionParameteri
      (foreign-lambda
        void
        "ConvolutionParameteri"
        unsigned-integer
        unsigned-integer
        integer)))
  (begin
    (define ConvolutionParameteriv
      (foreign-lambda
        void
        "ConvolutionParameteriv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define CopyConvolutionFilter1D
      (foreign-lambda
        void
        "CopyConvolutionFilter1D"
        unsigned-integer
        unsigned-integer
        integer
        integer
        unsigned-integer)))
  (begin
    (define CopyConvolutionFilter2D
      (foreign-lambda
        void
        "CopyConvolutionFilter2D"
        unsigned-integer
        unsigned-integer
        integer
        integer
        unsigned-integer
        unsigned-integer)))
  (begin
    (define GetConvolutionFilter
      (foreign-lambda
        void
        "GetConvolutionFilter"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define GetConvolutionParameterfv
      (foreign-lambda
        void
        "GetConvolutionParameterfv"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetConvolutionParameteriv
      (foreign-lambda
        void
        "GetConvolutionParameteriv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetSeparableFilter
      (foreign-lambda
        void
        "GetSeparableFilter"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void)
        (c-pointer void)
        (c-pointer void))))
  (begin
    (define SeparableFilter2D
      (foreign-lambda
        void
        "SeparableFilter2D"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-integer
        (c-pointer void)
        (c-pointer void))))
  (begin
    (define GetHistogram
      (foreign-lambda
        void
        "GetHistogram"
        unsigned-integer
        unsigned-char
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define GetHistogramParameterfv
      (foreign-lambda
        void
        "GetHistogramParameterfv"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetHistogramParameteriv
      (foreign-lambda
        void
        "GetHistogramParameteriv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define GetMinmax
      (foreign-lambda
        void
        "GetMinmax"
        unsigned-integer
        unsigned-char
        unsigned-integer
        unsigned-integer
        (c-pointer void))))
  (begin
    (define GetMinmaxParameterfv
      (foreign-lambda
        void
        "GetMinmaxParameterfv"
        unsigned-integer
        unsigned-integer
        f32vector)))
  (begin
    (define GetMinmaxParameteriv
      (foreign-lambda
        void
        "GetMinmaxParameteriv"
        unsigned-integer
        unsigned-integer
        s32vector)))
  (begin
    (define Histogram
      (foreign-lambda
        void
        "Histogram"
        unsigned-integer
        unsigned-integer
        unsigned-integer
        unsigned-char)))
  (begin
    (define Minmax
      (foreign-lambda
        void
        "Minmax"
        unsigned-integer
        unsigned-integer
        unsigned-char)))
  (begin
    (define ResetHistogram
      (foreign-lambda void "ResetHistogram" unsigned-integer)))
  (begin
    (define ResetMinmax (foreign-lambda void "ResetMinmax" unsigned-integer)))
  (begin
    (define ActiveTexture
      (foreign-lambda void "ActiveTexture" unsigned-integer)))
  (begin
    (define ClientActiveTexture
      (foreign-lambda void "ClientActiveTexture" unsigned-integer)))
  (begin
    (define MultiTexCoord1d
      (foreign-lambda void "MultiTexCoord1d" unsigned-integer double)))
  (begin
    (define MultiTexCoord1dv
      (foreign-lambda void "MultiTexCoord1dv" unsigned-integer f64vector)))
  (begin
    (define MultiTexCoord1f
      (foreign-lambda void "MultiTexCoord1f" unsigned-integer float)))
  (begin
    (define MultiTexCoord1fv
      (foreign-lambda void "MultiTexCoord1fv" unsigned-integer f32vector)))
  (begin
    (define MultiTexCoord1i
      (foreign-lambda void "MultiTexCoord1i" unsigned-integer integer)))
  (begin
    (define MultiTexCoord1iv
      (foreign-lambda void "MultiTexCoord1iv" unsigned-integer s32vector)))
  (begin
    (define MultiTexCoord1s
      (foreign-lambda void "MultiTexCoord1s" unsigned-integer short)))
  (begin
    (define MultiTexCoord1sv
      (foreign-lambda void "MultiTexCoord1sv" unsigned-integer s16vector)))
  (begin
    (define MultiTexCoord2d
      (foreign-lambda void "MultiTexCoord2d" unsigned-integer double double)))
  (begin
    (define MultiTexCoord2dv
      (foreign-lambda void "MultiTexCoord2dv" unsigned-integer f64vector)))
  (begin
    (define MultiTexCoord2f
      (foreign-lambda void "MultiTexCoord2f" unsigned-integer float float)))
  (begin
    (define MultiTexCoord2fv
      (foreign-lambda void "MultiTexCoord2fv" unsigned-integer f32vector)))
  (begin
    (define MultiTexCoord2i
      (foreign-lambda
        void
        "MultiTexCoord2i"
        unsigned-integer
        integer
        integer)))
  (begin
    (define MultiTexCoord2iv
      (foreign-lambda void "MultiTexCoord2iv" unsigned-integer s32vector)))
  (begin
    (define MultiTexCoord2s
      (foreign-lambda void "MultiTexCoord2s" unsigned-integer short short)))
  (begin
    (define MultiTexCoord2sv
      (foreign-lambda void "MultiTexCoord2sv" unsigned-integer s16vector)))
  (begin
    (define MultiTexCoord3d
      (foreign-lambda
        void
        "MultiTexCoord3d"
        unsigned-integer
        double
        double
        double)))
  (begin
    (define MultiTexCoord3dv
      (foreign-lambda void "MultiTexCoord3dv" unsigned-integer f64vector)))
  (begin
    (define MultiTexCoord3f
      (foreign-lambda
        void
        "MultiTexCoord3f"
        unsigned-integer
        float
        float
        float)))
  (begin
    (define MultiTexCoord3fv
      (foreign-lambda void "MultiTexCoord3fv" unsigned-integer f32vector)))
  (begin
    (define MultiTexCoord3i
      (foreign-lambda
        void
        "MultiTexCoord3i"
        unsigned-integer
        integer
        integer
        integer)))
  (begin
    (define MultiTexCoord3iv
      (foreign-lambda void "MultiTexCoord3iv" unsigned-integer s32vector)))
  (begin
    (define MultiTexCoord3s
      (foreign-lambda
        void
        "MultiTexCoord3s"
        unsigned-integer
        short
        short
        short)))
  (begin
    (define MultiTexCoord3sv
      (foreign-lambda void "MultiTexCoord3sv" unsigned-integer s16vector)))
  (begin
    (define MultiTexCoord4d
      (foreign-lambda
        void
        "MultiTexCoord4d"
        unsigned-integer
        double
        double
        double
        double)))
  (begin
    (define MultiTexCoord4dv
      (foreign-lambda void "MultiTexCoord4dv" unsigned-integer f64vector)))
  (begin
    (define MultiTexCoord4f
      (foreign-lambda
        void
        "MultiTexCoord4f"
        unsigned-integer
        float
        float
        float
        float)))
  (begin
    (define MultiTexCoord4fv
      (foreign-lambda void "MultiTexCoord4fv" unsigned-integer f32vector)))
  (begin
    (define MultiTexCoord4i
      (foreign-lambda
        void
        "MultiTexCoord4i"
        unsigned-integer
        integer
        integer
        integer
        integer)))
  (begin
    (define MultiTexCoord4iv
      (foreign-lambda void "MultiTexCoord4iv" unsigned-integer s32vector)))
  (begin
    (define MultiTexCoord4s
      (foreign-lambda
        void
        "MultiTexCoord4s"
